--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
 
 </head>
 <body>
+<div class="container">
     <h1 style="color:red"> This heading is in red</h1>
 
     <p> This is a text to be in red colour</p>
     <p> This text to be displayed in green</p>
     <p> this text to be displayed in blue</p>
+</div>
 </body>
 </html>
